login and signup page styled

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,5 +1,5 @@
 {% extends 'base/main.html' %}
-{% block contents %}
+{% block content %}
 <section>
     <div class="home-container">
         <h1>Welcome To Antio</h1>
@@ -7,4 +7,4 @@
         <a href=""><button>Start Writing</button></a>  
     </div>
 </section>
-{% endblock contents  %}
+{% endblock content  %}
