--- a/base/templates/base/nav_bar.html
+++ b/base/templates/base/nav_bar.html
@@ -11,10 +11,10 @@
         </div>
         <div class="nav-buttons">
             <div class="log">
-                <a href=""><button>Log In</button></a>
+                <a href="{%url 'login'%}"><button>Log In</button></a>
             </div>
             <div class="register">
-                <a href=""><button>Get Started</button></a>
+                <a href="{% url 'signup' %}"><button>Get Started</button></a>
             </div>
 
         </div>
