--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./images/logo1.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="{% static './images/logo1.png' %}"  />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <title>BloggingSite</title>
   </head>
   <body>
     {% include 'base/nav_bar.html' %}
-    {% block contents %}
+    {% block content %}
 
-    {% endblock contents %}
+    {% endblock content %}
     
     
 </body>
