blogge create page styled

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -4,7 +4,7 @@
     <div class="home-container">
         <h1>Welcome To Antio</h1>
         <p>write your thoughts,discover stories,passions,and expertise from writers on any topic</p>
-        <a href=""><button>Start Writing</button></a>  
+        <a href="{% url 'createblogge' %}"><button>Start Writing</button></a>  
     </div>
 </section>
 {% endblock content  %}
