--- a/static/css/style.css
+++ b/static/css/style.css
@@ -197,3 +197,79 @@ a {
     color: #E1BEE7;
     text-decoration: none
 }
+
+/* =============create blogge form========== */
+
+.blogeform-container{
+    height: 700px;
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 1.5em;
+    box-shadow: 0px 11px 35px 2px rgb(89 53 255 / 14%);
+    margin-top: 5rem;
+
+}
+.blogeform-container form{
+    display: grid;
+}
+.blogeform-container form .bloggewrite input{
+    margin-top: 5rem;
+    text-align: left;
+    width: 76%;
+    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 1px;
+    background: rgba(136, 126, 126, 0.04);
+    padding: 20px 40px;
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    box-sizing: border-box;
+    border: 2px solid rgba(0, 0, 0, 0.02);
+    margin-left: 46px;
+    font-family: 'Ubuntu', sans-serif;
+}
+.blogeform-container form .bloggewrite textarea{
+    margin-top: 3rem;
+    text-align: left;
+    width: 76%;
+    height: 300px;
+    resize: none;
+    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 1px;
+    background: rgba(136, 126, 126, 0.04);
+    padding: 20px 40px;
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    box-sizing: border-box;
+    border: 2px solid rgba(0, 0, 0, 0.02);
+    margin-left: 46px;
+    margin-bottom: 27px;
+    font-family: 'Ubuntu', sans-serif;
+}
+.blogeform-container .buttons{
+    display: flex;
+    margin-top: 2rem;
+    gap: 2rem;
+    margin-left: 10rem;
+    cursor: pointer;
+}
+.blogeform-container .buttons button{
+    padding: 0.7rem 1.6rem;
+    border-radius: 8px;
+    background: transparent;
+    color: white;
+    border: 1px white solid;
+    font-weight: 600;
+    justify-content: start;
+    pointer-events: none;
+    
+    
+}
+button input[value="POST"]{
+    font-size: 1.2rem;
+    font-weight: 600;
+}
