--- a/base/templates/base/blog_create_form.html
+++ b/base/templates/base/blog_create_form.html
@@ -6,11 +6,12 @@
          <input type="text" placeholder="Write Your Blogge Title">
         <textarea placeholder="Write What's In Your Mind" id="" cols="30" rows="10"></textarea>
       </div>
-        <div class="buttons">
-          <a type="" href="{% url 'home' %}"><button>BACK</button></a>
-         
-          <a><button> <input type="submit" value="POST"></button></a>   
-        </div>
+      <div class="buttons">
+        <a href="{% url 'home' %}">
+        <div class="butt">BACK</div>
+        </a>
+        <input type="submit" value="SUBMIT">
+    </div>
         
     </form>
 </div>
