user authentication login added

--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -11,11 +11,19 @@
     <title>BloggingSite</title>
   </head>
   <body>
+    {% if messages %}
+    <ul class="messages">
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+    {% endif %}
     {% include 'base/nav_bar.html' %}
     {% block content %}
 
     {% endblock content %}
-    
+
+    <script href="{% static './JS/javascript.js' %}"></script>
     
 </body>
 </html>     
