--- a/base/templates/base/user_profile.html
+++ b/base/templates/base/user_profile.html
@@ -10,13 +10,17 @@
         <div class="profile">
             <img src="{% static 'images/avatar.svg' %}" alt="">
         </div>
-        <p>ANEeeb</p>
-        <p>@aneebanu</p>
+        <p>{{request.user.name}}</p>
+        <p>{{request.user.username}}</p>
        
         <p class="bio">
-            Our online curOur online currency converter is showing you the value of 5000 US Dollar in Indian Rupees according to the current foreign exchange rate of INR 414250. Today i.e. Monday 14/08/2023 , for 5000 US Dollar you get 414250 Indian Rupees.rency converter is showing you the value of 5
-        </p>
+            {{request.user.bio}}
+            </p>
         <a href="{% url 'profile_edit' %}"><button>Edit Profile</button></a>
+        <a href="{% url 'logout' %}"><button>Logout</button></a>
+       
+       
+
     </div>
 </div>
 
