--- a/base/templates/base/nav_bar.html
+++ b/base/templates/base/nav_bar.html
@@ -9,6 +9,20 @@
                 <a href="{% url 'home' %}"><img src="{% static 'images/an.png' %}" alt=""></a>
             </div>
         </div>
+        {% if request.user.is_authenticated %}
+        <a href="{% url 'profile' %}">
+            <div class="userprofile">
+                    <div class="profile">
+                        <img src="{% static 'images/avatar.svg' %}" alt="">
+                    </div>
+                    <div class="usernames">
+                    <p>{{request.user.name}}</p>
+                    <p>{{request.user.username}}</p>
+                    </div>
+                    
+            </div> 
+        </a> 
+        {% else %}
         <div class="nav-buttons">
             <div class="log">
                 <a href="{%url 'login'%}"><button>Log In</button></a>
@@ -16,19 +30,8 @@
             <div class="register">
                 <a href="{% url 'signup' %}"><button>Get Started</button></a>
             </div>
-
         </div>  
-        {% comment %} <a href="{% url 'profile' %}">
-        <div class="userprofile">
-                <div class="profile">
-                    <img src="{% static 'images/avatar.svg' %}" alt="">
-                </div>
-                <div class="usernames">
-                <p>ANeeb</p>
-                <p>@aneebanu</p>
-                </div>
-                
-        </div> 
-    </a> {% endcomment %}
+        {% endif %}
+   
     </div>
 </header>
