--- a/base/templates/base/profile_edit.html
+++ b/base/templates/base/profile_edit.html
@@ -2,11 +2,14 @@
 {% block content %}
 <div class="edit_profile_contaienr">
     <div class="edit_profile">
-        <form action="">
-            <input type="text" placeholder="Name">
-            <input type="text" placeholder="Username">
-            <input type="Email" placeholder="Email">
-            <textarea name="" cols="30" rows="10" placeholder="Bio"></textarea>
+        <form action="" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            {% for field in form  %}
+            <div class="form__group">
+                <div class="label"><label for="profile_pic">{{field.label}}</label></div>
+                <div class="input_box">{{field}}</div>
+            </div>
+            {% endfor %}
             <div class="buttons">
                 <a href="{% url 'profile' %}">
                 <div class="butt">BACK</div>
