--- a/static/css/style.css
+++ b/static/css/style.css
@@ -412,24 +412,29 @@ a {
 /* ===========profile edti================= */
 .edit_profile_contaienr .edit_profile{
     height: auto;
-    width: 800px;
+    width: 700px;
     border-radius: 1.5em;
     box-shadow: 0px 11px 35px 2px rgb(89 53 255 / 14%);
     margin-left: auto;
-    margin-right: auto;
-    margin-top: 2rem;
-    text-align: center;
+    margin-right: auto; 
     padding: 3rem;
     position: relative;
 
 }
-.edit_profile form{
+.edit_profile .form__group{
     display: grid;
-    row-gap: 3rem;
+    gap: 1rem;
+}
+.edit_profile form{
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
 }
  form input{
     background-color: transparent;
     padding: 1rem 0;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 10px;
     border: 1px solid gray;
     padding-left: 1rem;
@@ -449,7 +454,7 @@ a {
 .buttons {
     display: flex;
     align-items: center;
-    gap: 5rem;
+    gap: 2rem;
     margin-left: 2rem;
 }
 .buttons .butt{
