solved some issues on profile(id passing)

--- a/base/templates/base/blogge_feed.html
+++ b/base/templates/base/blogge_feed.html
@@ -2,12 +2,12 @@
     {% for feed in feeds  %}
     <div class="box">
         <div class="header">
-            <a href="">
+            <a href="{% url 'profile' feed.host.id %}">
             <div class="user">
                 <div class="profile">
                     <img src="{% static 'images/avatar.svg' %}" alt="">
                 </div>
-                <p>{{feed.user}}</p>
+                <p>{{feed.host.name}}</p>
             </div>
         </a>
         <div class="time">
